@@ -4,6 +4,7 @@ Changelog
 2.13.5 (unreleased)
 -------------------
 
+- Use 'utf-8' to decode non-unicode strings instead of 'latin-1'.
 
 2.13.4 (2017-02-15)
 -------------------
